plugins {
    id 'com.android.library'
    id 'org.jetbrains.kotlin.android'
    id 'maven-publish'
}

def sdk_version = "1.0.23"
def version_code = 667

android {
    compileSdk 34

    defaultConfig {
        minSdk 26
        targetSdkVersion 33
        versionCode version_code
        versionName sdk_version

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "String", "SDK_VERSION", "\"" + sdk_version + "\""
            buildConfigField "int", "BUILD_NUMBER", version_code.toString()
        }
        debug {
            buildConfigField "String", "SDK_VERSION", "\"" + sdk_version + "\""
            buildConfigField "int", "BUILD_NUMBER", version_code.toString()
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    namespace 'com.payme.sdk'
    buildFeatures {
        buildConfig true
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.fragment:fragment-ktx:1.5.5'
    implementation 'androidx.appcompat:appcompat:1.5.0'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.webkit:webkit:1.4.0'
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'org.nanohttpd:nanohttpd-webserver:2.3.1'
    implementation 'androidx.biometric:biometric:1.2.0-alpha04'
    implementation 'com.airbnb.android:lottie:5.2.0'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'androidx.core:core:1.9.0'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.google.zxing:core:3.3.3'
    implementation 'com.mixpanel.android:mixpanel-android:7.+'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'

    def camerax_version = "1.2.2"
    implementation "androidx.camera:camera-core:${camerax_version}"
    implementation "androidx.camera:camera-camera2:${camerax_version}"
    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
    implementation "androidx.camera:camera-video:${camerax_version}"
    implementation "androidx.camera:camera-view:${camerax_version}"
    implementation "androidx.camera:camera-extensions:${camerax_version}"

    // liveness & mrz detect
    implementation 'com.google.mlkit:object-detection:17.0.0'
    implementation 'com.google.mlkit:object-detection-custom:17.0.0'

    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")

    // UI
    implementation "io.github.chaosleung:pinview:1.4.4"
    implementation "androidx.window:window-extensions:1.0.0-alpha01"
    implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.25"

    // liveness & mrz detect
    implementation "com.google.mlkit:face-detection:16.1.5"
    implementation "com.google.mlkit:text-recognition:16.0.0"

    // Network
    implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
    implementation "com.squareup.okhttp3:okhttp:3.6.0"
    implementation "com.squareup.retrofit2:retrofit:2.6.2"
    implementation "com.squareup.retrofit2:converter-gson:2.6.2"

    // implement for tensorflow
    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
    implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
    // implement for gif
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'

    // kalapasdk
    implementation project(":kalapasdk")
    implementation "com.beust:klaxon:5.5"

    implementation fileTree(dir: 'libs', include: ['*.jar'])
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                groupId = "com.payme.sdk"
                artifactId = "PayME-Android-Sdk"
                version = '0.4.0'
            }
        }
    }
}